--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 }
 
 body {
-  height: 200vh;
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  /* height: 200vh; */
+  /* min-height: 100vh; */
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) no-repeat center center fixed;
+  /* transition: all 5s ease; */
+  /* background-repeat: ; */
 }
