--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -8,6 +8,30 @@ img {
     width: 32.5em;
 }
 
+@media only screen and (max-width: 600px) {
+    .heading {
+        font-size: 25px!important;
+    }
+    .Home {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px;
+    }
+
+    .para {
+        width: 100%!important;
+    }
+    img {
+        width: 250px;
+        // opacity: 0.2;
+    }
+
+    // .rightContainer {
+    //     position: absolute;
+    // }
+}
+
 .heading {
     text-align: start;
     font-size: 2.5rem;
@@ -16,6 +40,7 @@ img {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+    filter: drop-shadow(0 0.7rem 0.55rem rgba(0, 0, 0, 0.406));
 }
 
 .leftContainer {
@@ -31,8 +56,9 @@ img {
     }
 }
 
-button {
-    background: linear-gradient(45deg,#fcaf3b,#f25c2a);
+.button button {
+    // background: linear-gradient(45deg,#fcaf3b,#2af2e8);
+    background: rgba(234, 126, 25, 0.768);
     padding: 20px 33px;
     cursor: pointer;
     border-radius: 30px;
@@ -42,7 +68,7 @@ button {
     color: whitesmoke;
     z-index: 1;
     transition: all 0.5s ease;
-    box-shadow: 0 10px 28px #d8724a;
+    box-shadow: 0 10px 28px rgba(234, 126, 25, 0.768);
     margin: 55px 0;
     display: flex;
     flex-direction: row;
