--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,32 +1,59 @@
 .Nav {
     background-color: transparent;
-    margin: 13px;
+    // margin: 13px;
+    padding: 13px;
     overflow-y: visible;
     transition: all 0.3s ease;
+    // position: absolute;
     color: white;
     font-size: 1.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    // transition: all 0.5s ease;
     a {
         color: white!important;
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .Nav.active {
+       
+        width: 95vw!important;
+    }
+    .cartIcon {
+        z-index: 999;
+    }
+
+    .mobileCart {
+        .Nav a {
+            color: black!important;
+        }
+    }
+    
+}
+
 
 .Nav.active {
-    padding: 13px;
+    padding: 7px 13px;
     margin: 0;
-    transition: all 0.3s ease;
+    // margin: 13px;
+    // transition: all 0.3s ease;
     background-color: whitesmoke;
     top: 0;
+    // right: 0;
+    // left: 0;
     color: black;
     position: fixed;
-    width: 100vw;
-    justify-content: space-between;
-    align-items: center; 
+    // width: 100vw;
+    // width: 100%;
+    width: 100%;
+    // justify-content: space-between;
+    // justify-content: space-around;
+    // align-items: center; 
     z-index: 999;
     box-shadow: 0 10px 28px #2524255f;
+    // transition: all 0.5s ease;
     
     a {
         color: black!important;
@@ -104,5 +131,71 @@ a {
         display: flex;
         
 
+    }
+}
+
+.menuContainer-active {
+    background-color: white;
+    // border: 3px solid black;
+    position: absolute;
+    width: 50%;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    z-index: 998;
+    transition: width 5.75s!important;
+    
+}
+
+.menuContainer {
+    display: none;
+    transition: all 0.5s ease;
+}
+
+.backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    // z-index: 99;
+    transition: all 5.5s ease;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    transition: all 0.5s ease;
+    a {
+        color: black!important;
+    }
+}
+
+.close {
+    color: black;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+}
+
+.mobileCart {
+    position: fixed;
+    bottom: 10px;
+    color: black!important;
+    border: 1px solid rgba(142, 140, 140, 0.539);
+    right: 10px;
+    border-radius: 50%;
+    z-index: 888;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 0 10px 28px #2524255f;
+    a {
+        color: black!important;
     }
 }
