--- a/src/Components/Shop/Product/Product.scss
+++ b/src/Components/Shop/Product/Product.scss
@@ -9,7 +9,10 @@
     background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
     box-shadow: 0 10px 28px #2524255f;
     background-color: black;
-    width: 350px;
+    width: 25rem;
+    // max-height: 45rem;
+    height: 100%;
+    // min-height: 45rem;
     transition: all 0.5s ease;
     display: flex;
     flex-direction: column;
@@ -26,6 +29,7 @@
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
         transition: all 0.5s ease;
+        filter: drop-shadow(0 0.7rem 0.55rem rgba(0, 0, 0, 0.406));
         &:hover {
             cursor: pointer;
             transition: all 0.5s ease;
@@ -35,7 +39,11 @@
     .detailsBox {
         background-color: whitesmoke;
         width: 100%;
+        height: 100%;
         border-bottom-left-radius: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         border-bottom-right-radius: 50px;
         .title {
             text-align: start;
@@ -69,6 +77,27 @@
                     transform: scale(1.1);
                     transition: all 0.5s ease;
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .outerBox {
+        // 
+        width: 95%;
+        // height: 555px;
+        .imageBox img {
+            width: 50%;
+        }
+        .detailsBox .title {
+            font-size: 18px;
+            margin: 0;
+        }
+        .detailsBox {
+            height: 250px;
+            .price {
+                font-size: 18px;
             }
         }
     }
