--- a/src/Components/Shop/Product/ProductPage/ProductPage.scss
+++ b/src/Components/Shop/Product/ProductPage/ProductPage.scss
@@ -29,6 +29,22 @@
     }
 }
 
+@media only screen and (max-width: 600px) {
+    .productPage {
+        margin: 100px 20px;
+        .productImage {
+            img {
+                width: 180px;
+            }
+        }
+    }
+    .con {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .con {
     display: flex;
     padding: 30px;
@@ -60,9 +76,35 @@
 }
 
 button {
-    border-radius: 16px;
-    background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
-    box-shadow: none;
-    margin: 45px auto;
-    box-shadow: 0 10px 28px #c64abc93;
+    // border-radius: 16px;
+    // padding: 20px 33px;
+    //     cursor: pointer;
+    //     border-radius: 30px;
+    //     font-weight: 900;
+    //     font-size: 18px;
+    // background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+    // box-shadow: none;
+    // margin: 45px auto;
+    // border: none;
+    // box-shadow: 0 10px 28px #c64abc93;
+    background: rgba(234, 126, 25, 0.768);
+        padding: 20px 33px;
+        cursor: pointer;
+        border-radius: 30px;
+        font-weight: 900;
+        font-size: 18px;
+        border: none;
+        color: whitesmoke;
+        z-index: 1;
+        transition: all 0.5s ease;
+        box-shadow: 0 10px 28px rgba(234, 126, 25, 0.768);
+        margin: 55px 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    
+        &:hover {
+            transform: scale(1.1);
+            transition: all 0.5s ease;
+        }
 }
